package at.spengergasse.fachtheorie.aufgabe1.model;

// TODO: Füge hier benötigte Properties ein.
public class Address {
}
