package at.spengergasse.fachtheorie.aufgabe1.model;

// TODO: Füge hier die Enum-Werte ein.
public enum CustomerType {
}
