package at.spengergasse.fachtheorie.aufgabe1.model;

// TODO: Füge hier benötigte Properties und JPA-Annotationen ein.
public class Employee {
}
